--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
     <include src="./partials/header.html"></include>
+    <include src="./partials/backdrop.html"></include>
   </body>
 </html>
