--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+  
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
