--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <script
+			src="https://kit.fontawesome.com/2707afadc2.js"
+			crossorigin="anonymous"></script>
     <script type="module" src="./index.js"></script>
   </head>
   <body>
