--- a/src/library.html
+++ b/src/library.html
@@ -11,9 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/footer.html"></include>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
