loader created and added
loader created and added on home page and library page

--- a/src/library.html
+++ b/src/library.html
@@ -15,5 +15,6 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <div class="loader" id="loader"></div>
   </body>
 </html>
