--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/backdrop.html"></include>
     <include src="./partials/footer.html"></include>
+    <div class="loader" id="loader"></div>
   </body>
 </html>
