--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,22 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/backdrop.html"></include>
+    <include src="./partials/signup-modal.html"></include>
+    <include src="./partials/login-modal.html"></include>
     <!-- <include src="./partials/footer.html"></include> -->
     <script type="module" src="./index.js"></script>
     <script
