--- a/src/library.html
+++ b/src/library.html
@@ -23,6 +23,8 @@
   <body>
     <include src="./partials/library-header.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/signup-modal.html"></include>
+    <include src="./partials/login-modal.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
