Add awesome fonts, user icon, fix drop shadow

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,11 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/backdrop.html"></include>
     <include src="./partials/footer.html"></include>
-    <div class= "loader" id="loader"></div>
+    <div class="loader" id="loader"></div>
     <script type="module" src="./index.js"></script>
-    <script src="https://kit.fontawesome.com/2707afadc2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2707afadc2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
