--- a/src/library.html
+++ b/src/library.html
@@ -14,8 +14,12 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
-    <div class="loader" id="loader"></div>
     <include src="./partials/footer.html"></include>
+    <div class="loader" id="loader"></div>
     <script type="module" src="./index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2707afadc2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
