--- a/src/library.html
+++ b/src/library.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/empty-library.html"></include>
     <include src="./partials/footer.html"></include>
     <div class="loader" id="loader"></div>
     <script type="module" src="./index.js"></script>
