include galery + modal

--- a/src/library.html
+++ b/src/library.html
@@ -16,6 +16,7 @@
     <include src="./partials/library-header.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/gallery.html"></include>
     <div class="loader" id="loader"></div>
     <script type="module" src="./index.js"></script>
     <script
