--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/backdrop.html"></include>
+    <include src="./partials/auth-menu.html"></include>
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <include src="./partials/footer.html"></include>
