--- a/src/library.html
+++ b/src/library.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.css" />
+    <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,6 +24,7 @@
     <include src="./partials/library-header.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/auth-menu.html"></include>
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <div class="loader" id="loader"></div>
