--- a/src/library.html
+++ b/src/library.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>F I L M O T E K A</title>
     <link rel="stylesheet" href="./sass/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,6 +14,7 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/gallery-library.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/footer.html"></include>
     <div class="loader" id="loader"></div>
