--- a/src/library.html
+++ b/src/library.html
@@ -30,7 +30,7 @@
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <div class="loader" id="loader"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./library.js"></script>
     <script
       src="https://kit.fontawesome.com/2707afadc2.js"
       crossorigin="anonymous"
