Revert "Revert "Merge branch 'main' into feature/firebase""
This reverts commit e225c86b36a0eb1136b70a32657b2e7bf4da0969.

--- a/src/library.html
+++ b/src/library.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>F I L M O T E K A</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="shortcut icon" href="./images/gitcat.gif" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,13 +23,14 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/gallery-library.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/auth-menu.html"></include>
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <div class="loader" id="loader"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./library.js"></script>
     <script
       src="https://kit.fontawesome.com/2707afadc2.js"
       crossorigin="anonymous"
