--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/team-modal.html"></include>
     <div class="loader" id="loader"></div>
     <script type="module" src="./index.js"></script>
     <script
