--- a/src/library.html
+++ b/src/library.html
@@ -25,6 +25,7 @@
     <include src="./partials/library-header.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/gallery-library.html"></include>
+    <include src="./partials/backdrop.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/auth-menu.html"></include>
     <include src="./partials/signup-modal.html"></include>
