--- a/src/library.html
+++ b/src/library.html
@@ -23,12 +23,14 @@
   </head>
   <body>
     <include src="./partials/library-header.html"></include>
+    <include src="./partials/backdrop.html"></include>
     <include src="./partials/empty-library.html"></include>
     <include src="./partials/gallery-library.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/auth-menu.html"></include>
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
+    <include src="./partials/team-modal.html"></include>
     <div class="loader" id="loader"></div>
     <script type="module" src="./library.js"></script>
     <script
