--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <include src="./partials/signup-modal.html"></include>
     <include src="./partials/login-modal.html"></include>
     <include src="./partials/footer.html"></include>
-    <div class="loader" id="loader"></div>
+    <include src="./partials/loader.html"></include>
     <script type="module" src="./index.js"></script>
     <script
       src="https://kit.fontawesome.com/2707afadc2.js"
